--- a/style/property.css
+++ b/style/property.css
@@ -13,12 +13,17 @@ h5 {
     font-size: 12px;
     color: #4E5A6B;
 }
-h6 {
-    display: inline-block;
+.listing-button {
+    margin-top: 0;
     border: 1px solid #E4E8EE;
     font-size: 14px;
     padding: 11px 12px 10px 13px;
     border-radius: 10px;
+    cursor: pointer;
+}
+.listing-button-active {
+    background-color: #5078E1;
+    color: white;
 }
 .width {
     width: 100%;
@@ -70,6 +75,7 @@ button {
     padding: 8px 16px;
     border-radius: 10px;
     background-color: #ffffff;
+    cursor: pointer;
 }
 .card-2 {
     margin: 35px 20px 6px 0;
@@ -106,6 +112,15 @@ input {
     background-color: #ffffff;
     border-radius: 10px;
     width: 100%;
+    height: 40px;
+    font-size: 14px;
+}
+input[type=radio] {
+    display: block;
+    border: 1px solid #E4E8EE;
+    background-color: #ffffff;
+    border-radius: 10px;
+    width: 10%;
     height: 40px;
     font-size: 14px;
 }
@@ -146,4 +161,16 @@ footer {
     border-radius: 10px;
     background-color: #ffffff;
 }
+
+@media only screen and (max-width: 600px) {
+    #expand {
+        display: none;
+        }
+  }
+
+  @media only screen and (max-width: 600px) {
+    body {
+        overflow-x: scroll;
+        }
+  }
 
